--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@types/node": "^12.20.28",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
@@ -12,7 +13,9 @@
     "baseui": "^10.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "styletron-engine-atomic": "^1.4.8",
     "styletron-react": "^6.0.1",
     "typescript": "^4.4.3",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-baseui": "^10.4.0"
+    "eslint-plugin-baseui": "^10.4.0",
+    "redux-devtools": "^3.7.0"
   }
 }
